fixed spacing a bit and photo names

--- a/styles.css
+++ b/styles.css
@@ -303,7 +303,7 @@ body {
     /* background-color: bisque; */
     display: grid;
     max-width: 1080px;
-    margin: 150px auto;
+    margin: 70px auto;
     /* grid-template-columns: 333px 333px 333px; */
     /* grid-template-columns: 250px 250px 250px 250px; */
     grid-template-columns: 1fr 1fr;
@@ -759,7 +759,7 @@ form .button:active {
     }
     .grid-container_contact {
         max-width: 540px;
-        margin: 100px auto;
+        margin: 70px auto;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2, 600px);
         grid-template-areas: 
@@ -796,6 +796,7 @@ form .button:active {
     .grid-container_about {
         max-width: 95%;
         grid-template-rows: repeat(2, 600px);
+        gap: 30px;
     }
     .grid-container_contact {
         max-width: 95%;
